<resources>

    <string name="app_name">NA PWr</string>

    <!-- ACTIVITIES -->

    <!-- Main -->
    <string name="label_top10">TOP 10</string>
    <string name="label_today">Dzisiaj</string>
    <string name="label_tomorrow">Jutro</string>
    <string name="label_callendar">Plan PWr</string>
    <string name="label_favourites">Ulubione</string>
    <string name="label_login2">Zaloguj się</string>
    <string name="label_logout">Wyloguj się</string>

    <!-- Login -->
    <string name="login_title">Zaloguj się NA PWr</string>
    <string name="label_login">Adres e-mail</string>
    <string name="label_password">Hasło </string>
    <string name="button_login2">Zaloguj się</string>
    <string name="login_email_error">Wpisz adres e-mail</string>
    <string name="login_password_error">Nieprawidłowe hasło</string>

    <!-- Preferences -->
    <string name="prefs_fullscreen_title">Pełny ekran</string>
    <string name="prefs_fullscreen_summary_off">Nie wyświetla na pełnym ekranie</string>
    <string name="prefs_fullscreen_summary_on">Wyświetla na pełnym ekranie</string>
    <string name="today_events">Dzisiejsze wydarzenia</string>

    <!-- Event -->
    <string name="event_title">Tytuł wydarzenia</string>
    <string name="event_from">Data poczatku</string>
    <string name="event_to">Data końca</string>
    <string name="event_address">Adres</string>
    <string name="event_date">Data</string>
    <string name="event_organier">Organizator</string>
    <string name="event_star">Liki</string>
    <string name="event_content">Treść wydarzenia</string>
    <string name="event_button_share">SHARE</string>
    <string name="event_poster_description">plakt wydarzenia</string>
	<string name="event_button_back">Wstecz</string>

    <!-- Event List -->
    <string name="event_list_name">Nazwa listy</string>
    <string name="event_list_no_events">Brak wydarzeń</string>
    <string name="event_list_no_plan">Twój plan zajęć zawsze pod ręką.</string>
    <string name="event_list_no_plan2">Zaloguj się NA PWr:</string>
    <string name="event_list_no_plan3">www.napwr.pl</string>
    <string name="event_list_no_plan4">i w ustawieniach swojego konta</string>
    <string name="event_list_no_plan5">dodaj link swojego planu ze strony</string>
    <string name="event_list_no_plan6">plan-pwr.pl</string>

    <!-- Dialogs -->
    <string name="dialog_yes">Tak</string>
    <string name="dialog_no">Nie</string>
    <string name="dialog_close">Wyłącz</string>
    <string name="dialog_hide">Działaj w tle</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="dialog_text">Czy wyłączyć aplikację?</string>
    <string name="dialog_close_text">Wyłączyć aplikację?</string>

    <!-- Images Content Description -->
    <string name="content_description_logo_napwr">Logo NA PWr</string>

    <!-- Plan -->
    <string name="plan_time">Czas</string>
    <string name="plan_title">Tytuł</string>
    <string name="plan_place">Miejsce</string>
    <string name="plan_teacher">Prowadzący</string>
    <string name="plan_type">Typ</string>
    <string name="plan_date">Data</string>

    <!-- connection_error -->
    <string name="connection_error_reconnect">Połącz ponownie</string>
    <string name="connection_error_offline">Tryb offline</string>
    <string name="connection_error_info">Brak połączenia z internetem</string>

    <!-- MENU -->
    <string name="menu_logo">Logo NAPWr</string>
    <string name="menu_item">item_name</string>
    <string name="menu_juwenalia">JUWENALIA</string>
    <string name="menu_juwenalia_sub">Juwenalia</string>
    <string name="menu_user">user_name</string>
    <string name="menu_user_plan">PLAN ZAJĘĆ</string>
    <string name="menu_user_plan_sub">Plan zajęc</string>
    <string name="menu_user_favourities">Ulubione</string>
    <string name="menu_user_facultity">Wydział</string>
    <string name="menu_today">DZISIAJ</string>
    <string name="menu_today_sub">Dzisiaj</string>
    <string name="menu_tomorrow">JUTRO</string>
    <string name="menu_tomorrow_sub">Jutro</string>
    <string name="menu_it">INFORMATYKA</string>
    <string name="menu_it_sub">Informatyka</string>
    <string name="menu_kultura">KULTURA</string>
    <string name="menu_kultura_sub">Kultura</string>
    <string name="menu_sport">SPORT</string>
    <string name="menu_sport_sub">Sport</string>
    <string name="menu_top10">TOP10</string>
    <string name="menu_top10_sub">Top 10</string>
    <string name="menu_refresh">ODŚWIERZ WYDARZENIA</string>
    <string name="menu_settings">USTAWIENIA</string>
    <string name="menu_login">ZALOGUJ SIĘ</string>
    <string name="menu_logout">WYLOGUJ SIĘ</string>
    <string name="menu_about">TWÓRCY NA PWr</string>
    <string name="menu_sponsor">SPONSORZY</string>
    <string name="menu_exit">ZAMKNIJ</string>

	<string name="cover_informatyka">cover_informatyka</string>
	<string name="cover_juwenalia">cover_juwenalia</string>
	<string name="cover_kultura">cover_kultura</string>
	<string name="cover_sport">cover_sport</string>
	<string name="cover_today">cover_today</string>	
	<string name="cover_tomorrow">cover_tomorrow</string>
	<string name="cover_top10">cover_top10</string>
	<string name="cover_user_facultity">cover_user_facultity</string>
	<string name="cover_user_favourities">cover_user_favourities</string>
	<string name="cover_user_plan">cover_user_plan</string>
	<string name="cover_user">cover_user</string>
    
	
	<string name="cover_kalendarz">cover_kalendarz</string>
	<string name="cover_imprezy">cover_imprezy</string>
	<string name="cover_szkolenia">cover_szkolenia</string>
	<string name="cover_kariera">cover_kariera</string>
	<string name="cover_teki">cover_teki</string>
	

</resources>