<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_body"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" 
        android:layout_marginBottom="@dimen/dialog_margins">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_margins"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_title_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dialog_logout_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_space_between_buttons"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/dialog_hide" />

        <Button
            android:id="@+id/dialog_logout_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dialog_space_between_buttons"
            android:layout_marginRight="@dimen/dialog_space_between_buttons"
            android:clickable="true"
            android:text="@string/dialog_close" />

        <Button
            android:id="@+id/dialog_logout_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_space_between_buttons"
            android:clickable="true"
            android:text="@string/dialog_cancel" />
    </LinearLayout>

</LinearLayout>