<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/connection_error_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_stroke"
            android:background="@color/dialog_stroke" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/default_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/connection_error_info"
                android:textStyle="bold" />

            <Button
                android:id="@+id/connectionError_reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/connection_error_reconnect" />

            <Button
                android:id="@+id/connectionError_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_error_offline" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_stroke"
            android:background="@color/dialog_stroke" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/connection_error_margin_bottom" />
    </LinearLayout>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connection_error_box"
        android:layout_marginBottom="@dimen/connection_error_margin_robot"
        android:src="@drawable/robot" />

</RelativeLayout>