<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_NAPWr"
        android:src="@drawable/napwr_logo" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_top10"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_top10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_today"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_today" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_tommorow"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_tommorow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_callendar"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_callendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_favourites"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_favourites" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/vertical_button_margin"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_button_login"
                    android:layout_width="@dimen/vertical_button_size"
                    android:layout_height="@dimen/vertical_button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button" />

                <TextView
                    android:id="@+id/main_textView_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_login2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>

    

</LinearLayout>